# casimir

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  cabal-nix.project  cabal.project  default.nix  external.nix  nix.mk  package.yaml  release.nix  shell.nix  stack.yaml
casimir/: LICENSE  casimir.cabal
casimir/src/argkind/Casimir/Base/: ArgKind.hs
casimir/src/argkind/Casimir/Higher/: ArgKind.hs
casimir/src/base/Casimir/: Base.hs  Cast.hs
casimir/src/base/Casimir/Base/: Cast.hs  EffFunctor.hs  Effect.hs  Implicit.hs  Lift.hs  List.hs  NoOp.hs  Union.hs
casimir/src/base/Casimir/Cast/: Cast.hs
casimir/src/benchmark/: Main.hs
casimir/src/benchmark/Benchmark/State/: Base.hs  Codensity.hs  CurriedStateTPipeline.hs  FreePipeline.hs  HandleFree.hs  MTL.hs  StateOpsToEnvOps.hs  StateOpsToReaderT.hs  StateTHandler.hs  StateTToEnvOpsPipeline.hs  WithStateT.hs
casimir/src/computation/Casimir/: Computation.hs
casimir/src/computation/Casimir/Computation/: Cast.hs  Computation.hs  Handler.hs  Pipeline.hs  Value.hs
casimir/src/free/Casimir/: Free.hs
casimir/src/free/Casimir/Free/: FreeEff.hs  FreeOps.hs  Handler.hs  NoOp.hs  Pipeline.hs  Union.hs
casimir/src/free/Casimir/Free/Monad/: Church.hs  Free.hs
casimir/src/freer/Casimir/: Freer.hs
casimir/src/freer/Casimir/Freer/: CoOp.hs  Codensity.hs  FreeEff.hs  FreeOps.hs  FreeTransformer.hs  Handler.hs
casimir/src/freer/Casimir/Freer/Monad/: Church.hs  Freer.hs
casimir/src/higher/Casimir/: Higher.hs
casimir/src/higher/Casimir/Higher/: Base.hs  CoOp.hs  Computation.hs  ContraLift.hs  EffFunctor.hs  Free.hs  NoOp.hs  Union.hs
casimir/src/higher/Casimir/Higher/ContraLift/: Either.hs  Identity.hs
casimir/src/higher/Casimir/Higher/Monad/: Church.hs  Free.hs
casimir/src/lib/: Casimir.hs
casimir/src/lib/Casimir/: Base.hs  Computation.hs  Freer.hs  Higher.hs  MonadOps.hs  Ops.hs  Transform.hs
casimir/src/lib/Casimir/Base/: ContraLift.hs  EffFunctor.hs  EffOps.hs  Effect.hs  Implicit.hs  Label.hs  Lift.hs  NoOp.hs  Union.hs
casimir/src/lib/Casimir/Cast/: Cast.hs  Entail.hs
casimir/src/lib/Casimir/Computation/: Cast.hs  Computation.hs  Handler.hs  Pipeline.hs  Value.hs
casimir/src/lib/Casimir/Free/: CoOp.hs  FreeEff.hs  FreeOps.hs  Handler.hs  Pipeline.hs
casimir/src/lib/Casimir/Free/Monad/: Church.hs  Free.hs
casimir/src/lib/Casimir/Freer/: Codensity.hs  FreeEff.hs  FreeOps.hs  Handler.hs  NoOp.hs  Union.hs
casimir/src/lib/Casimir/Freer/Monad/: Church.hs  Freer.hs
casimir/src/lib/Casimir/Higher/: Base.hs  CoOp.hs  Computation.hs  ContraLift.hs  EffFunctor.hs  Effect.hs  Free.hs  Lift.hs  NoOp.hs  Ops.hs  Union.hs
casimir/src/lib/Casimir/Higher/ContraLift/: Either.hs  Identity.hs  State.hs
casimir/src/lib/Casimir/Higher/Monad/: Church.hs  Free.hs
casimir/src/lib/Casimir/Higher/Ops/: Cont.hs  Exception.hs  Resource.hs  UnderOps.hs  UpperOps.hs
casimir/src/lib/Casimir/Ops/: Async.hs  Decide.hs  Env.hs  Exception.hs  Io.hs  Label.hs  Log.hs  State.hs
casimir/src/lib/Casimir/Ops/Decide/: Base.hs  Default.hs
casimir/src/lib/Casimir/Ops/Env/: Base.hs  Default.hs  Effect.hs  Free.hs  Higher.hs  MonadReader.hs  ReaderT.hs  Transform.hs
casimir/src/lib/Casimir/Ops/Io/: Base.hs  Default.hs  Freer.hs  Transform.hs
casimir/src/lib/Casimir/Ops/Resource/Higher/: Effect.hs
casimir/src/lib/Casimir/Ops/State/: Base.hs  Default.hs  Effect.hs  Free.hs  Freer.hs  Higher.hs  Label.hs  Lift.hs  MonadState.hs  StateT.hs  Transform.hs
casimir/src/lib/Casimir/Transform/: Lift.hs
casimir/src/main/: Demo.hs
casimir/src/ops/Casimir/: MonadOps.hs
casimir/src/ops/Casimir/Higher/Ops/: Cont.hs  Exception.hs  Resource.hs  UnderOps.hs  UpperOps.hs
casimir/src/ops/Casimir/Ops/: Async.hs  Decide.hs  Exception.hs  Io.hs  Label.hs  Log.hs  State.hs
casimir/src/ops/Casimir/Ops/Env/: Base.hs  Freer.hs  Higher.hs
casimir/src/ops/Casimir/Ops/Io/: Base.hs  Free.hs  Freer.hs  Transform.hs
casimir/src/ops/Casimir/Ops/State/: Base.hs  Freer.hs  Higher.hs  Transform.hs
casimir/src/signature/Casimir/Base/: Sig.hs
casimir/src/signature/Casimir/Higher/: Sig.hs
casimir/src/signature/Casimir/Param/: Sig.hs
casimir/src/signature/QuasiParam/Casimir/: Sig.hs
casimir/src/test/: Main.hs
casimir/src/test/Casimir/Test/: Basic.hs  Higher.hs  Main.hs  Ops.hs
casimir/src/test/Casimir/Test/Basic/: Test1.hs
casimir/src/test/Casimir/Test/Higher/: Exception.hs  Resource.hs
casimir/src/test/Casimir/Test/Ops/: Ambivalent.hs  Env.hs  Exception.hs  Pipe.hs  State.hs
casimir/src/test/Effect/Test/: Main.hs  Ops.hs
casimir/src/test/Effect/Test/Higher/: Exception.hs  Resource.hs
casimir/src/test/Effect/Test/Ops/: Ambivalent.hs  Env.hs  Exception.hs  Pipe.hs  State.hs
code/: implicit-effects.cabal  package.yaml
code/src/benchmark/: Main.hs
code/src/benchmark/Benchmark/: State.hs
code/src/benchmark/Benchmark/State/: Base.hs  Codensity.hs  CurriedStateTPipeline.hs  FreePipeline.hs  HandleFree.hs  StateEffToEnvEff.hs  StateEffToReaderT.hs  StateOpsToEnvOps.hs  StateOpsToReaderT.hs  StateTHandler.hs  StateTToEnvEffPipeline.hs  StateTToEnvOpsPipeline.hs  WithStateT.hs
code/src/lib/Control/Effect/: Implicit.hs
code/src/lib/Control/Effect/Implicit/: Base.hs  Cast.hs  Computation.hs  Free.hs  Freer.hs  Higher.hs  MonadOps.hs  Ops.hs  Reflect.hs  Tagged.hs  Transform.hs
code/src/lib/Control/Effect/Implicit/Base/: Base.hs  BaseOps.hs  ContraLift.hs  EffFunctor.hs  EffOps.hs  Effect.hs  Implicit.hs  Label.hs  LabeledOps.hs  Lift.hs  MonadOps.hs  NoEff.hs  NoOp.hs  Union.hs
code/src/lib/Control/Effect/Implicit/Cast/: Cast.hs  Entail.hs
code/src/lib/Control/Effect/Implicit/Computation/: Cast.hs  Computation.hs  Handler.hs  Lift.hs  (+2 more)
code/src/lib/Control/Implicit/: Param.hs
code/src/main/: Demo.hs  Main.hs
code/src/test/Effect/Test/: Higher.hs  Ops.hs  Overlap.hs
code/src/test/Effect/Test/Higher/: Exception.hs  Resource.hs
code/src/test/Effect/Test/Ops/: Ambivalent.hs  Env.hs  Exception.hs  Pipe.hs  Resource.hs  State.hs  Tag.hs
demo/: LICENSE  casimir-demo.cabal  demo.lhs  implicit-effects-demo.cabal
(+293 files in other folders)
