cabal-version: 2.4

name:           casimir
version:        0.1.0
synopsis:       Algebraic Effects in Haskell using Implicit Parameters
description:    casimir is a experimental effect library to support
                algebraic effects in Haskell.
category:       Effect
stability:      experimental
homepage:       https://github.com/maybevoid/casimir
bug-reports:    https://github.com/maybevoid/casimir/issues
author:         Soares Chen
maintainer:     Soares Chen <soares.chen@maybevoid.com>
copyright:      Copyright (C) Soares Ruofei Chen
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/maybevoid/casimir

common deps
  ghc-options: -Wall -O2 -flate-specialise
  default-language: Haskell2010
  build-depends:
      base
    , quasi-params
    , async
    , constraints
    , free
    , ghc-prim
    , monad-control
    , mtl
    , transformers
  default-extensions:
    GADTs
    Strict
    DataKinds
    EmptyCase
    StrictData
    RankNTypes
    TypeFamilies
    InstanceSigs
    TypeOperators
    DeriveFunctor
    ImplicitParams
    ExplicitForAll
    KindSignatures
    PatternSynonyms
    ConstraintKinds
    TypeApplications
    FlexibleContexts
    FlexibleInstances
    OverloadedStrings
    DerivingStrategies
    AllowAmbiguousTypes
    ScopedTypeVariables
    UndecidableInstances
    QuantifiedConstraints
    MultiParamTypeClasses
    FunctionalDependencies
    TypeFamilyDependencies
    GeneralizedNewtypeDeriving

library
  import: deps
  exposed-modules:
      Casimir
      Casimir.Base
      Casimir.Computation
      Casimir.Free
      Casimir.Freer
      Casimir.Cast
      Casimir.Higher

      Casimir.MonadOps

      Casimir.Ops
      Casimir.Ops.Label
      Casimir.Ops.Async
      Casimir.Ops.Decide
      Casimir.Ops.Exception
      Casimir.Ops.Log

      Casimir.Ops.State
      Casimir.Ops.State.Base
      Casimir.Ops.State.Free
      Casimir.Ops.State.Freer
      Casimir.Ops.State.Lift
      Casimir.Ops.State.Higher
      Casimir.Ops.State.Transform

      Casimir.Ops.Io
      Casimir.Ops.Io.Base
      Casimir.Ops.Io.Free
      Casimir.Ops.Io.Freer
      Casimir.Ops.Io.Transform

      Casimir.Ops.Env
      Casimir.Ops.Env.Base
      Casimir.Ops.Env.Free
      Casimir.Ops.Env.Freer
      Casimir.Ops.Env.Higher
      Casimir.Ops.Env.Transform

      Casimir.Transform

      Casimir.Higher.Ops
      Casimir.Higher.Ops.Cont
      Casimir.Higher.Ops.Resource
      Casimir.Higher.Ops.Exception
      Casimir.Higher.Ops.UnderOps
      Casimir.Higher.Ops.UpperOps

      Casimir.Higher.Free
      Casimir.Higher.Monad.Free
      Casimir.Higher.Monad.Church
      Casimir.Higher.ContraLift.State
      Casimir.Higher.ContraLift.Either
      Casimir.Higher.ContraLift.Identity

  other-modules:
      Casimir.Base.EffOps
      Casimir.Base.Effect
      Casimir.Base.EffFunctor
      Casimir.Base.Implicit
      Casimir.Base.Lift
      Casimir.Base.ContraLift
      Casimir.Base.NoOp
      Casimir.Base.Union

      Casimir.Computation.Cast
      Casimir.Computation.Computation
      Casimir.Computation.Handler
      Casimir.Computation.Pipeline
      Casimir.Computation.Value

      Casimir.Free.CoOp
      Casimir.Free.FreeOps
      Casimir.Free.FreeEff
      Casimir.Free.NoOp
      Casimir.Free.Union
      Casimir.Free.Pipeline
      Casimir.Free.Handler
      Casimir.Free.Monad.Free
      Casimir.Free.Monad.Church

      Casimir.Freer.CoOp
      Casimir.Freer.FreeOps
      Casimir.Freer.Monad.Church
      Casimir.Freer.Monad.Freer
      Casimir.Freer.FreeEff
      Casimir.Freer.Handler
      Casimir.Freer.NoOp
      Casimir.Freer.Union
      Casimir.Freer.Codensity

      Casimir.Cast.Cast
      Casimir.Cast.Entail

      Casimir.Higher.Base
      Casimir.Higher.CoOp
      Casimir.Higher.NoOp
      Casimir.Higher.Union
      Casimir.Higher.EffFunctor
      Casimir.Higher.ContraLift
      Casimir.Higher.Computation

      Casimir.Transform.Lift

  hs-source-dirs:
      src/lib

benchmark casimir-benchmark
  import: deps
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Benchmark.State
      Benchmark.State.Base
      Benchmark.State.CurriedStateTPipeline
      Benchmark.State.FreePipeline
      Benchmark.State.HandleFree
      Benchmark.State.MTL
      Benchmark.State.StateOpsToEnvOps
      Benchmark.State.StateOpsToReaderT
      Benchmark.State.StateTHandler
      Benchmark.State.StateTToEnvOpsPipeline
      Benchmark.State.WithStateT
      Benchmark.State.Codensity
  hs-source-dirs:
      src/benchmark
  build-depends:
      casimir
    , criterion

executable casimir-demo2
  import: deps
  main-is: Main.hs
  other-modules:
      Demo
  hs-source-dirs:
      src/main
  build-depends:
      casimir

test-suite casimir-test
  import: deps
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Effect.Test.Main
      Effect.Test.Ops
      Effect.Test.Ops.Ambivalent
      Effect.Test.Ops.Env
      Effect.Test.Ops.Exception
      Effect.Test.Ops.Pipe
      Effect.Test.Ops.State

      Effect.Test.Higher
      Effect.Test.Higher.Resource
      Effect.Test.Higher.Exception
  hs-source-dirs:
      src/test
  build-depends:
      QuickCheck
    , casimir
    , tasty
    , tasty-hunit
    , tasty-quickcheck
