cabal-version: 3.0

name:           casimir
version:        0.1.0
synopsis:       Algebraic Effects in Haskell using Implicit Parameters
description:    casimir is a experimental effect library to support
                algebraic effects in Haskell.
category:       Effect
stability:      experimental
homepage:       https://github.com/maybevoid/casimir
bug-reports:    https://github.com/maybevoid/casimir/issues
author:         Soares Chen
maintainer:     Soares Chen <soares.chen@maybevoid.com>
copyright:      Copyright (C) Soares Ruofei Chen
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/maybevoid/casimir

common common
  ghc-options: -Wall -O2 -flate-specialise
  default-language: Haskell2010
  build-depends: base

common deps
  import: common

  build-depends:
      quasi-params
    , async
    , constraints
    , free
    , ghc-prim
    , monad-control
    , mtl
    , transformers
  default-extensions:
    GADTs
    Strict
    DataKinds
    EmptyCase
    StrictData
    RankNTypes
    TypeFamilies
    InstanceSigs
    TypeOperators
    DeriveFunctor
    ImplicitParams
    ExplicitForAll
    KindSignatures
    PatternSynonyms
    ConstraintKinds
    TypeApplications
    FlexibleContexts
    FlexibleInstances
    OverloadedStrings
    DerivingStrategies
    AllowAmbiguousTypes
    ScopedTypeVariables
    UndecidableInstances
    QuantifiedConstraints
    MultiParamTypeClasses
    FunctionalDependencies
    TypeFamilyDependencies
    GeneralizedNewtypeDeriving

library quasi-params-casimir-sig
  import: common

  hs-source-dirs:
    src/signature

  exposed-modules:
    Casimir.Param.Sig

library quasi-params-casimir
  import: common

  build-depends:
      quasi-params-multi
    , quasi-params-casimir-sig

  reexported-modules:
    Casimir.Param

  mixins:
    quasi-params-multi
      ( QuasiParam.MultiParam.Module
        as Casimir.Param
      ) requires
        ( QuasiParam.MultiParam.Sig
          as Casimir.Param.Sig
        )

library casimir-base
  import: deps

  hs-source-dirs:
    src/base

  build-depends:
    quasi-params-casimir

  exposed-modules:
    Casimir.Base

  reexported-modules:
    Casimir.Param

  other-modules:
    Casimir.Base.Effect
    Casimir.Base.EffFunctor
    Casimir.Base.Implicit
    Casimir.Base.Lift
    Casimir.Base.ContraLift
    Casimir.Base.Cast

library casimir-computation
  import: deps

  hs-source-dirs:
    src/computation

  build-depends:
    casimir-base

  exposed-modules:
    Casimir.Computation

  other-modules:
    Casimir.Computation.Cast
    Casimir.Computation.Computation
    Casimir.Computation.Handler
    Casimir.Computation.Pipeline
    Casimir.Computation.Value

library casimir-free
  import: deps

  hs-source-dirs:
    src/free

  build-depends:
      casimir-base
    , casimir-computation

  exposed-modules:
    Casimir.Free

  other-modules:
    Casimir.Free.CoOp
    Casimir.Free.FreeOps
    Casimir.Free.FreeEff
    Casimir.Free.NoOp
    Casimir.Free.Union
    Casimir.Free.Pipeline
    Casimir.Free.Handler
    Casimir.Free.Monad.Free
    Casimir.Free.Monad.Church

library casimir-freer
  import: deps

  hs-source-dirs:
    src/freer

  build-depends:
    casimir-base

  exposed-modules:
    Casimir.Freer

  other-modules:
    Casimir.Freer.FreeOps
    Casimir.Freer.Monad.Church
    Casimir.Freer.Monad.Freer
    Casimir.Freer.FreeTransformer
    Casimir.Freer.Handler
    Casimir.Freer.Codensity

library casimir-higher
  import: deps

  hs-source-dirs:
    src/higher

  build-depends:
      casimir-base
    , casimir-freer
    , casimir-computation

  exposed-modules:
    Casimir.Higher
    Casimir.Higher.Free

    Casimir.Higher.ContraLift
    Casimir.Higher.ContraLift.State
    Casimir.Higher.ContraLift.Either
    Casimir.Higher.ContraLift.Identity

    Casimir.Higher.Monad.Free
    Casimir.Higher.Monad.Church

  other-modules:
    Casimir.Higher.Base
    Casimir.Higher.Union
    Casimir.Higher.EffFunctor
    Casimir.Higher.Computation

library casimir-ops
  import: deps

  hs-source-dirs:
    src/ops

  build-depends:
      casimir-base
    , casimir-freer
    , casimir-higher
    , casimir-computation

  exposed-modules:
    Casimir.MonadOps
    Casimir.Transform

    Casimir.Ops
    Casimir.Ops.Label
    Casimir.Ops.Async
    Casimir.Ops.Decide
    Casimir.Ops.Exception
    Casimir.Ops.Log

    Casimir.Ops.State
    Casimir.Ops.State.Base
    Casimir.Ops.State.Freer
    Casimir.Ops.State.Lift
    Casimir.Ops.State.Higher
    Casimir.Ops.State.Transform

    Casimir.Ops.Io
    Casimir.Ops.Io.Base
    Casimir.Ops.Io.Freer
    Casimir.Ops.Io.Transform

    Casimir.Ops.Env
    Casimir.Ops.Env.Base
    Casimir.Ops.Env.Freer
    Casimir.Ops.Env.Higher
    Casimir.Ops.Env.Transform


    Casimir.Higher.Ops
    Casimir.Higher.Ops.Cont
    Casimir.Higher.Ops.Resource
    Casimir.Higher.Ops.Exception
    Casimir.Higher.Ops.UnderOps
    Casimir.Higher.Ops.UpperOps

  other-modules:
    Casimir.Transform.Lift

library
  import: deps

  hs-source-dirs:
    src/lib

  build-depends:
      casimir-base
    , casimir-free
    , casimir-freer
    , casimir-higher
    , casimir-computation
    , casimir-ops

  reexported-modules:
      Casimir.Base
    , Casimir.Free
    , Casimir.Freer
    , Casimir.Higher
    , Casimir.Computation

  exposed-modules:
    Casimir

benchmark casimir-benchmark
  import: deps
  type: exitcode-stdio-1.0
  main-is: Main.hs

  hs-source-dirs:
    src/benchmark

  other-modules:
    Benchmark.State
    Benchmark.State.Base
    Benchmark.State.CurriedStateTPipeline
    Benchmark.State.FreePipeline
    Benchmark.State.HandleFree
    Benchmark.State.MTL
    Benchmark.State.StateOpsToEnvOps
    Benchmark.State.StateOpsToReaderT
    Benchmark.State.StateTHandler
    Benchmark.State.StateTToEnvOpsPipeline
    Benchmark.State.WithStateT
    Benchmark.State.Codensity

  build-depends:
      casimir
    , casimir-ops
    , criterion

test-suite casimir-test
  import: deps
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
    Casimir.Test.Main
    Casimir.Test.Ops
    Casimir.Test.Ops.Ambivalent
    Casimir.Test.Ops.Env
    Casimir.Test.Ops.Exception
    Casimir.Test.Ops.Pipe
    Casimir.Test.Ops.State

    Casimir.Test.Higher
    Casimir.Test.Higher.Resource
    Casimir.Test.Higher.Exception

  hs-source-dirs:
      src/test
  build-depends:
      casimir
    , casimir-ops
    , casimir-higher
    , tasty
    , tasty-hunit
    , tasty-quickcheck
