cabal-version: 3.0

name:           casimir
version:        0.1.0
synopsis:       Algebraic Effects in Haskell using Implicit Parameters
description:    casimir is a experimental effect library to support
                algebraic effects in Haskell.
category:       Effect
stability:      experimental
homepage:       https://github.com/maybevoid/casimir
bug-reports:    https://github.com/maybevoid/casimir/issues
author:         Soares Chen
maintainer:     Soares Chen <soares.chen@maybevoid.com>
copyright:      Copyright (C) Soares Ruofei Chen
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/maybevoid/casimir

common common
  ghc-options: -Wall -O2 -flate-specialise
  default-language: Haskell2010
  build-depends: base

common deps
  import: common

  build-depends:
      async
    , constraints
    , free
    , ghc-prim
    , monad-control
    , mtl
    , transformers
  default-extensions:
    GADTs
    Strict
    DataKinds
    EmptyCase
    StrictData
    RankNTypes
    TypeFamilies
    InstanceSigs
    TypeOperators
    DeriveFunctor
    ImplicitParams
    ExplicitForAll
    KindSignatures
    PatternSynonyms
    ConstraintKinds
    TypeApplications
    FlexibleContexts
    FlexibleInstances
    OverloadedStrings
    DerivingStrategies
    ScopedTypeVariables
    UndecidableInstances
    QuantifiedConstraints
    MultiParamTypeClasses
    FunctionalDependencies
    TypeFamilyDependencies
    GeneralizedNewtypeDeriving

library casimir-argkind
  hs-source-dirs:
    src/argkind

  build-depends:
      base

  exposed-modules:
    Casimir.Base.ArgKind
    Casimir.Higher.ArgKind

library casimir-params
  build-depends:
      casimir-argkind
    , quasi-params

  reexported-modules:
      Casimir.Base.Params
    , Casimir.Higher.Params

  mixins:
      quasi-params
        ( QuasiParams as Casimir.Base.Params )
        requires
          ( QuasiParams.ArgKind
            as Casimir.Base.ArgKind
          )

    , quasi-params
        ( QuasiParams as Casimir.Higher.Params )
        requires
          ( QuasiParams.ArgKind
            as Casimir.Higher.ArgKind
          )

library
  import: deps

  hs-source-dirs:
    src/lib

  build-depends:
      casimir-params
    , casimir-argkind

  other-modules:
    Casimir.Base.Lift
    Casimir.Base.Effect
    Casimir.Base.EffFunctor
    Casimir.Base.ContraLift

    Casimir.Higher.Lift
    Casimir.Higher.Effect
    Casimir.Higher.EffFunctor

  exposed-modules:
    Casimir

    Casimir.Base
    Casimir.Higher

    Casimir.Ops.State
    Casimir.Ops.State.Effect
    Casimir.Ops.State.StateT
    Casimir.Ops.State.MonadState

    Casimir.Ops.Env
    Casimir.Ops.Env.Effect
    Casimir.Ops.Env.ReaderT
    Casimir.Ops.Env.MonadReader

    Casimir.Ops.Resource.Higher.Effect

test-suite casimir-test
  import: deps
  type: exitcode-stdio-1.0
  main-is: Main.hs

  other-modules:
    Casimir.Test.Main

    Casimir.Test.Basic
    Casimir.Test.Basic.Test1

  hs-source-dirs:
      src/test
  build-depends:
      casimir
    , tasty
    , tasty-hunit
    , tasty-quickcheck
