cabal-version: 2.4

name:           implicit-effects
version:        0.1.0
synopsis:       Algebraic Effects in Haskell using Implicit Parameters
description:    implicit-effects is a experimental effect library to support
                algebraic effects in Haskell.
category:       Effect
stability:      experimental
homepage:       https://github.com/maybevoid/implicit-effects
bug-reports:    https://github.com/maybevoid/implicit-effects/issues
author:         Soares Chen
maintainer:     Soares Chen <soares.chen@maybevoid.com>
copyright:      Copyright (C) Soares Ruofei Chen
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/maybevoid/implicit-effects

common deps
  ghc-options: -Wall -O2 -flate-specialise
  default-language: Haskell2010
  build-depends:
      async
    , base
    , free
    , mtl
    , reflection
    , constraints
    , transformers
    , monad-control
    , ghc-prim
  default-extensions:
    GADTs
    Strict
    DataKinds
    EmptyCase
    StrictData
    RankNTypes
    TypeFamilies
    InstanceSigs
    TypeOperators
    DeriveFunctor
    ImplicitParams
    ExplicitForAll
    KindSignatures
    PatternSynonyms
    ConstraintKinds
    TypeApplications
    FlexibleContexts
    FlexibleInstances
    OverloadedStrings
    DerivingStrategies
    AllowAmbiguousTypes
    ScopedTypeVariables
    UndecidableInstances
    QuantifiedConstraints
    MultiParamTypeClasses
    FunctionalDependencies
    TypeFamilyDependencies
    GeneralizedNewtypeDeriving

library
  import: deps
  exposed-modules:
      Control.Implicit.Param

      Control.Effect.Implicit
      Control.Effect.Implicit.Base
      Control.Effect.Implicit.Computation
      Control.Effect.Implicit.Free
      Control.Effect.Implicit.Freer
      Control.Effect.Implicit.Cast
      Control.Effect.Implicit.Higher

      Control.Effect.Implicit.MonadOps

      Control.Effect.Implicit.Ops
      Control.Effect.Implicit.Ops.Label
      Control.Effect.Implicit.Ops.Async
      Control.Effect.Implicit.Ops.Decide
      Control.Effect.Implicit.Ops.Exception
      Control.Effect.Implicit.Ops.Log

      Control.Effect.Implicit.Ops.State
      Control.Effect.Implicit.Ops.State.Base
      Control.Effect.Implicit.Ops.State.Free
      Control.Effect.Implicit.Ops.State.Freer
      Control.Effect.Implicit.Ops.State.Lift
      Control.Effect.Implicit.Ops.State.Higher
      Control.Effect.Implicit.Ops.State.Transform

      Control.Effect.Implicit.Ops.Io
      Control.Effect.Implicit.Ops.Io.Base
      Control.Effect.Implicit.Ops.Io.Free
      Control.Effect.Implicit.Ops.Io.Freer
      Control.Effect.Implicit.Ops.Io.Transform

      Control.Effect.Implicit.Ops.Env
      Control.Effect.Implicit.Ops.Env.Base
      Control.Effect.Implicit.Ops.Env.Free
      Control.Effect.Implicit.Ops.Env.Freer
      Control.Effect.Implicit.Ops.Env.Higher
      Control.Effect.Implicit.Ops.Env.Transform

      Control.Effect.Implicit.Transform

      Control.Effect.Implicit.Higher.Ops
      Control.Effect.Implicit.Higher.Ops.Cont
      Control.Effect.Implicit.Higher.Ops.Resource
      Control.Effect.Implicit.Higher.Ops.Exception
      Control.Effect.Implicit.Higher.Ops.UnderOps
      Control.Effect.Implicit.Higher.Ops.UpperOps

      Control.Effect.Implicit.Higher.Free
      Control.Effect.Implicit.Higher.Monad.Free
      Control.Effect.Implicit.Higher.Monad.Church
      Control.Effect.Implicit.Higher.ContraLift.State
      Control.Effect.Implicit.Higher.ContraLift.Either
      Control.Effect.Implicit.Higher.ContraLift.Identity

  other-modules:
      Control.Effect.Implicit.Base.EffOps
      Control.Effect.Implicit.Base.Effect
      Control.Effect.Implicit.Base.EffFunctor
      Control.Effect.Implicit.Base.Implicit
      Control.Effect.Implicit.Base.Lift
      Control.Effect.Implicit.Base.ContraLift
      Control.Effect.Implicit.Base.NoOp
      Control.Effect.Implicit.Base.Union

      Control.Effect.Implicit.Computation.Cast
      Control.Effect.Implicit.Computation.Computation
      Control.Effect.Implicit.Computation.Handler
      Control.Effect.Implicit.Computation.Pipeline
      Control.Effect.Implicit.Computation.Value

      Control.Effect.Implicit.Free.CoOp
      Control.Effect.Implicit.Free.FreeOps
      Control.Effect.Implicit.Free.FreeEff
      Control.Effect.Implicit.Free.NoOp
      Control.Effect.Implicit.Free.Union
      Control.Effect.Implicit.Free.Pipeline
      Control.Effect.Implicit.Free.Handler
      Control.Effect.Implicit.Free.Monad.Free
      Control.Effect.Implicit.Free.Monad.Church

      Control.Effect.Implicit.Freer.CoOp
      Control.Effect.Implicit.Freer.FreeOps
      Control.Effect.Implicit.Freer.Monad.Church
      Control.Effect.Implicit.Freer.Monad.Freer
      Control.Effect.Implicit.Freer.FreeEff
      Control.Effect.Implicit.Freer.Handler
      Control.Effect.Implicit.Freer.NoOp
      Control.Effect.Implicit.Freer.Union
      Control.Effect.Implicit.Freer.Codensity

      Control.Effect.Implicit.Cast.Cast
      Control.Effect.Implicit.Cast.Entail

      Control.Effect.Implicit.Higher.Base
      Control.Effect.Implicit.Higher.CoOp
      Control.Effect.Implicit.Higher.NoOp
      Control.Effect.Implicit.Higher.Union
      Control.Effect.Implicit.Higher.EffFunctor
      Control.Effect.Implicit.Higher.ContraLift
      Control.Effect.Implicit.Higher.Computation

      Control.Effect.Implicit.Transform.Lift

  hs-source-dirs:
      src/lib

benchmark implicit-effects-benchmark
  import: deps
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Benchmark.State
      Benchmark.State.Base
      Benchmark.State.CurriedStateTPipeline
      Benchmark.State.FreePipeline
      Benchmark.State.HandleFree
      Benchmark.State.MTL
      Benchmark.State.StateOpsToEnvOps
      Benchmark.State.StateOpsToReaderT
      Benchmark.State.StateTHandler
      Benchmark.State.StateTToEnvOpsPipeline
      Benchmark.State.WithStateT
      Benchmark.State.Codensity
  hs-source-dirs:
      src/benchmark
  build-depends:
      implicit-effects
    , criterion

executable implicit-effects-demo2
  import: deps
  main-is: Main.hs
  other-modules:
      Demo
  hs-source-dirs:
      src/main
  build-depends:
      implicit-effects

test-suite implicit-effects-test
  import: deps
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Effect.Test.Main
      Effect.Test.Ops
      Effect.Test.Ops.Ambivalent
      Effect.Test.Ops.Env
      Effect.Test.Ops.Exception
      Effect.Test.Ops.Pipe
      Effect.Test.Ops.State

      Effect.Test.Higher
      Effect.Test.Higher.Resource
      Effect.Test.Higher.Exception
  hs-source-dirs:
      src/test
  build-depends:
      QuickCheck
    , implicit-effects
    , tasty
    , tasty-hunit
    , tasty-quickcheck
