cabal-version: 2.4

name:           casimir-demo
version:        0.1.0
synopsis:       Algebraic Effects in Haskell using Implicit Parameters
description:    casimir is a experimental effect library to support
                algebraic effects in Haskell.
category:       Effect
stability:      experimental
homepage:       https://github.com/maybevoid/casimir
bug-reports:    https://github.com/maybevoid/casimir/issues
author:         Soares Chen
maintainer:     Soares Chen <soares.chen@maybevoid.com>
copyright:      Copyright (C) Soares Ruofei Chen
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/maybevoid/casimir

executable casimir-demo
  main-is: demo.lhs
  hs-source-dirs: ./
  build-depends:
      base
    , mtl
    , transformers
    , casimir
